# oz_class

./: 챌린지5_BE_02_박대성.html  HdfTML.ipynb  README.md  chapter5.ipynb  profile.css  챌린지6_BE_02_박대성.html  챌린지7_BE_02_박대성.html
AWS/: 클라우드_AWS.md
AWS/AutoScaling/: AutoScaling.md
AWS/ELB/: Why_ELB.md
AWS/S3(정적웹사이트호스팅)/: index.html
Admin__project/: Admin_project.html  README.md  kream_crawl.ipynb
Admin__project/New_project/: app.py
Crawling/: melon_m.py  melon_monthly.py
DATABASE/SQL/:  mysqlsample.sql  YES24.sql  sakila.sql  간단한 스키마 설계하기.sql
Django/DAY1/: db.sqlite3  pyproject.toml
Django/DAY2/: db.sqlite3
Django/DAY3/: db.sqlite3  pyproject.toml
Django/DAY3/boards/: admin.py
Django/DAY3/boards/migrations/: 0002_board_date_board_likes_board_reviews_board_writer.py
Django/DAY3/common/: models.py
Django/DAY3/config/: settings.py  urls.py
Django/DAY3/feeds/: admin.py  views.py
Django/DAY3/users/: models.py  serializers.py  urls.py  views.py
Django/DAY3/users/migrations/: 0002_user_is_business.py
Django/DAY4/: db.sqlite3  pyproject.toml
Django/DAY5/: 1_data_analysis.ipynb  2.Pandas.ipynb
Flask/Blog/: app.py
html&css/: 챌린지1_BE_02_박대성.html  챌린지2_BE_02_박대성.html  챌린지3_BE_02_박대성.html  챌린지4_BE_02_박대성.html  챌린지7_BE_02_박대성.html
python/: 4일차_파이썬14_16화_BE_02_박대성.ipynb  5일차_파이썬 17_20화_BE_02_박대성.ipynb  Chapter04_기초과제(BE_02_박대성).ipynb  Chapter05~08_기초과제(BE_02_박대성).ipynb  Chapter09_13_기초과제(BE_02_박대성).ipynb  Mini_Project_BE_02__박대성.ipynb  Mini_Project_BE_02_박대성.ipynb  Mini_Project_BE__02___박대성.ipynb
챌린지18_BE_02_박대성/: header.css  info.css  notice.css
(+79 files in other folders)
